fixing rows sticking out

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
   padding-bottom: 8px;
 }
 
+#logo-xs {
+  color: white;
+  text-decoration: none;
+}
+
 #dropdownMenu1 {
   background-color: rgba(255, 255, 255, 0);
   color: white;
